--- a/src/containers/about/styles.scss
+++ b/src/containers/about/styles.scss
@@ -5,7 +5,7 @@
     padding: 20px;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(78, 84, 88);
+    #background-color: rgb(78, 84, 88);
     &__personalWrapper,
     &__servicesWrapper {
       width: 50%;
