--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -99,3 +99,18 @@
     height: 70px;
     margin-bottom: 5px;
 }
+
+.cloud-env{
+    color: white;
+    margin-left: 12vw;
+    font-size: 18px;
+    display: flex;
+    flex-direction: row;
+}
+.cloud-env-name{
+    margin-top: 15px;
+    margin-left: 10px;
+}
+.gcp-icon{
+    height: 50px;
+}
