--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: #0f2e69;
+    background-color: #9c753b;
     height: 84px;
     display: flex;
     justify-content: center;
@@ -91,7 +91,7 @@
     }
 }
 .navbar__container__logo{
-    background-color: rgb(153, 187, 218);
+    background-color: rgb(215, 153, 67);
     border-radius: 50px;
 }
 .venkat-img{
