--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 :root{
     --yellow-theme-background-color : #1d1d1d;
-    --yellow-theme-main-color : #599cf3;
+    --yellow-theme-main-color : #FF9900;
     --yellow-theme-sub-text-color : #ffffff;
     --yellow-theme-nav-background-color : #181818;
     font-family: Arial, Helvetica, sans-serif;
