--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -114,3 +114,19 @@
 .gcp-icon{
     height: 50px;
 }
+.go-to-aws-btn-div{
+    height: 30px;
+    width: 80px;
+    margin-left: 10px;
+    text-decoration: none;
+    padding: 10px;
+    padding-left: 14px;
+    background-color: rgb(243, 171, 95);
+    border-radius: 10px;
+  }
+.go-to-aws-btn-link{
+    text-decoration: none;
+    font-size: 10px;
+    font-weight: 600;
+    color: rgb(37, 34, 34);
+}
